<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_Divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_Multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_Plus">+</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_Equal">=</string>
    <string name="_Minus">-</string>
    <string name="_00">00</string>
    <string name="_dots">.</string>
    <string name="_leftB">(</string>
    <string name="_rightB">)</string>
</resources>