<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:textColor="@color/grey"
        style="@style/tvAction" />
    <TextView
        android:id="@+id/tvOutput"
        android:textColor="@color/black"
        style="@style/tvAction"/>
    <TextView
        android:id="@+id/tvResult"
        android:textColor="@color/black"
        style="@style/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="" />
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnC"
                android:text="@string/c"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnleftB"
                android:text="@string/_leftB"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnRightB"
                android:text="@string/_rightB"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnMinus"
                android:text="@string/_Minus"
                android:textColor="@color/black"
                style="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn7"
                android:text="@string/_7"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn8"
                android:text="@string/_8"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn9"
                android:text="@string/_9"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnDivide"
                android:text="@string/_Divide"
                android:textColor="@color/black"
                style="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn4"
                android:text="@string/_4"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn5"
                android:text="@string/_5"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn6"
                android:text="@string/_6"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnMultiply"
                android:text="@string/_Multiply"
                android:textColor="@color/black"
                style="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn1"
                android:text="@string/_1"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn2"
                android:text="@string/_2"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn3"
                android:text="@string/_3"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnPlus"
                android:text="@string/_Plus"
                android:textColor="@color/black"
                style="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white">
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn00"
                android:text="@string/_00"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn0"
                android:text="@string/_0"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnDots"
                android:text="@string/_dots"
                android:textColor="@color/black"
                style="@style/button"/>
            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnEqual"
                android:text="@string/_Equal"
                android:textColor="@color/black"
                style="@style/button"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>